--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A knowyourmeme api interface written in typescript",
   "main": "dist/index.js",
   "types": "dist/types/**.d.ts",
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
