Add readme and update package.json license

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/epsilonethan/knowyourmeme-ts.git"
   },
   "author": "epsilonethan",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "publishConfig": {
     "access": "public"
   },
