--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "if [ $(ls test/*.test.js 2>/dev/null | wc -l) -gt 0 ]; then jest; else echo 'No tests found'; fi"
   },
   "repository": {
     "type": "git",
