--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "knowyourmeme-ts",
-  "version": "0.0.3",
+  "version": "0.0.4",
+  "type": "module",
   "description": "A knowyourmeme api interface written in typescript",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
